kubernetes/apps/dev/visit-web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: visit-demo
  namespace: visit-web
spec:
  ingressClassName: nginx
  rules:
    - host: gitops.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: visit-web-visit-gateway
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: visit-web-visit-web
                port:
                  number: 80
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: visit-web-visit-gateway
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: visit-web-visit-web
                port:
                  number: 80
